<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".controller.activity.FindMyChurchActivity"
    android:padding="32dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo_appli_foreground" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textColor="@color/textColor"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_my_church_question_text"
            android:textSize="20sp"
            android:textColor="@color/textColor"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"/>

        <fragment android:id="@+id/autocomplete_fragment_church"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            />

    </LinearLayout>

    <Button
        android:id="@+id/activity_find_my_church_btn_validation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        android:text="@string/btn_valider"
        android:textAllCaps="false" />

</RelativeLayout>