<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- MAIN CONTAINER -->
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"

        android:background="@color/orangeColor"
        android:orientation="vertical">

        <!-- IMAGE VIEW GO4LUNCH -->
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"

            android:layout_margin="@dimen/default_large_margin"
            app:srcCompat="@drawable/ic_logo_appli_foreground"
            android:background="@color/colorPrimaryDark" />

        <!-- TITLE GO4LUNCH -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/default_title_size"
            android:textStyle="bold"
            android:textColor="@color/textColor"
            android:layout_margin="@dimen/default_margin"/>

        <!-- DESCRIPTION LUX4WORSHIP -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_text_size"
            android:layout_gravity="center"
            android:text="@string/connexion_activity_description"
            android:textColor="@color/textColor"
            android:textAlignment="center"
            android:background="@color/colorPrimaryDark"
            android:layout_margin="@dimen/default_margin"/>

        <!-- BUTTONS CONTAINER -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical"
            android:layout_margin="@dimen/default_large_margin">

            <!-- BUTTON LOGIN FACEBOOK -->
            <Button
                android:id="@+id/login_facebook_button"
                android:text="@string/loginFacebook"
                android:textColor="#fff"
                android:textSize="@dimen/default_text_size"
                android:background="@drawable/border_facebook"
                style="?android:attr/borderlessButtonStyle"
                android:layout_margin="@dimen/default_large_margin"
                android:padding="@dimen/default_large_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                />

            <!-- BUTTON LOGIN GOOGLE -->
            <Button
                android:id="@+id/login_google_button"
                android:text="@string/loginGoogle"
                android:textColor="#fff"
                android:textSize="@dimen/default_text_size"
                android:background="@drawable/border_google"
                style="?android:attr/borderlessButtonStyle"
                android:layout_margin="@dimen/default_large_margin"
                android:padding="@dimen/default_large_margin"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"

                />

        </LinearLayout>

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>